--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ occupy this width if less then occupy whole container */
 
 .pricing__card {
     padding: 4.8rem;
-    width: 55%;
+    width: 75%;
     border-radius: 11px;
 }
 
